# fmatio

./: .gitignore  CMakeLists.txt  README.md  dconfig  fmatio_all.hpp
docs/html/: CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  annotated.html  arguments_8hpp.html  arguments_8hpp__dep__incl.dot  arguments_8hpp__incl.dot  arguments_8hpp_source.html  arguments_8inl.html  arguments_8inl__dep__incl.dot  arguments_8inl__incl.dot  arguments_8inl_source.html  basic__string_8hpp.html  basic__string_8hpp__dep__incl.dot  basic__string_8hpp__incl.dot  basic__string_8hpp_source.html  basic__string_8inl.html  basic__string_8inl__dep__incl.dot  basic__string_8inl__incl.dot  basic__string_8inl_source.html  basic__string__utilities_8hpp.html  basic__string__utilities_8hpp__dep__incl.dot  basic__string__utilities_8hpp__incl.dot  basic__string__utilities_8hpp_source.html  basic__string__view_8hpp.html  basic__string__view_8hpp__dep__incl.dot  basic__string__view_8hpp__incl.dot  basic__string__view_8hpp_source.html  basic__string__view_8inl.html  basic__string__view_8inl__dep__incl.dot  basic__string__view_8inl__incl.dot  basic__string__view_8inl_source.html  basic__string__view__utilities_8hpp.html  basic__string__view__utilities_8hpp__dep__incl.dot  basic__string__view__utilities_8hpp__incl.dot  basic__string__view__utilities_8hpp_source.html  bool_8hpp.html  bool_8hpp__dep__incl.dot  bool_8hpp__incl.dot  bool_8hpp_source.html  char_8hpp_source.html  (+282 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+16 more)
docs/latex/: CMakeCCompilerId_8c_source.tex  CMakeCXXCompilerId_8cpp_source.tex  annotated.tex  arguments_8hpp.tex  arguments_8hpp.tex.tmp  arguments_8hpp__dep__incl.dot  arguments_8hpp__incl.dot  arguments_8hpp_source.tex  arguments_8inl.tex  arguments_8inl__dep__incl.dot  arguments_8inl__incl.dot  arguments_8inl_source.tex  basic__string_8hpp.tex  basic__string_8hpp__dep__incl.dot  basic__string_8hpp__incl.dot  basic__string_8hpp_source.tex  basic__string_8inl.tex  basic__string_8inl__dep__incl.dot  basic__string_8inl__incl.dot  basic__string_8inl_source.tex  basic__string__utilities_8hpp.tex  basic__string__utilities_8hpp__dep__incl.dot  basic__string__utilities_8hpp__incl.dot  basic__string__utilities_8hpp_source.tex  basic__string__view_8hpp.tex  basic__string__view_8hpp__dep__incl.dot  basic__string__view_8hpp__incl.dot  basic__string__view_8hpp_source.tex  basic__string__view_8inl.tex  basic__string__view_8inl__dep__incl.dot  basic__string__view_8inl__incl.dot  basic__string__view_8inl_source.tex  basic__string__view__utilities_8hpp.tex  basic__string__view__utilities_8hpp__dep__incl.dot  basic__string__view__utilities_8hpp__incl.dot  basic__string__view__utilities_8hpp_source.tex  bool_8hpp.tex  bool_8hpp__dep__incl.dot  bool_8hpp__incl.dot  char__string_8hpp.tex  (+154 more)
include/: fmatio.hpp  fmatio_all.hpp
include/fmatio/: basic_string.hpp  basic_string.inl  basic_string_view.hpp  basic_string_view.inl  core.hpp  format.hpp  format.inl  formatters.hpp  formatters.inl  string.hpp  string_view.hpp  string_view.inl  types.hpp  writers.hpp
include/fmatio/args/: format_argument.hpp
include/fmatio/details/: arguments.hpp  arguments.inl  basic_string_utilities.hpp  char_string.hpp  double.hpp  float.hpp  format_traits.hpp  int16.hpp  int32.hpp  int64.hpp  int8.hpp  type_traits.hpp  uint16.hpp  uint32.hpp  uint64.hpp  uint8.hpp  writers.hpp  writers.inl
include/fmatio/details/types/: bool.hpp  char.hpp  char_string.hpp  double.hpp  float.hpp  int16.hpp  int32.hpp  int64.hpp  int8.hpp  uint16.hpp  uint32.hpp  uint64.hpp  uint8.hpp
include/fmatio/std/: basic_string_utilities.hpp  basic_string_view_utilities.hpp  utilities.hpp
scripts/: fmatio_all_gen.py
source/: fmatio.cpp  fmatio.inl
source/fmatio/: format.inl  string.inl  string_view.inl  writers.inl
source/fmatio/details/: arguments.inl
tests/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt  fmatio_all.hpp  fmatio_all_v1.0.1.hpp  main.cpp  utils.hpp
